crates/ink/tests/ui/contract/fail/trait/trait-message-payable-mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/contract/fail/trait/trait-message-payable-mismatch.rs:25:9
   |
25 |         fn message(&mut self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected struct `TraitMessagePayable<false>`
              found struct `TraitMessagePayable<true>`
